Integracion de mercado pago

--- a/src/app/Components/media/media.component.css
+++ b/src/app/Components/media/media.component.css
@@ -408,3 +408,20 @@ button{
     color: #FAF8F2;
     border-color: #FAF8F2;
 }
+
+.btnMP {
+    background: #496123;
+    color: #FAF8F2;
+    border-color: #faf2f9;
+    overflow: hidden;
+    transition: all 500ms ease;
+    z-index: 0;
+}
+
+
+
+.btnMP:hover {
+    background: #9bc45a;
+    color: #FAF8F2;
+    border-color: #FAF8F2;
+}
