--- a/src/app/Components/media/media.component.html
+++ b/src/app/Components/media/media.component.html
@@ -96,7 +96,7 @@
                     </table>
                 </div>
                 <br><br>
-                <div *ngIf="alquilerCreado || this.total != 0" class="row mt-5"> 
+                <div *ngIf="alquilerCreado && this.total != 0" class="row mt-5"> 
                     <div class="col-12 d-flex justify-content-center">
                         <div class="col-4">
                             <a [href]="paymentUrl" target="_blank" class="btn btnMP w-100">Pagar alquiler con Mercado Pago!</a>
