--- a/src/app/Components/rents/rents.component.html
+++ b/src/app/Components/rents/rents.component.html
@@ -10,12 +10,12 @@
     <table class="table table-hover mtc-5">
         <thead class="table table-hover mtc-5 table-sm ">
             <tr>
-                <th mat-sort-header="nombre" scope="col">Nombre socio</th>
+                <th mat-sort-header="nombre" scope="col">Nombre</th>
                 <th mat-sort-header="nombre" scope="col">Nro documento</th>
                 <th mat-sort-header="subotal" scope="col">Subtotal</th>
                 <th mat-sort-header="estado" scope="col">Estado</th>
-                <th mat-sort-header="estado" scope="col">Fecha de entrega</th>
-                <th mat-sort-header="estado" scope="col">Fecha de devolución</th>
+                <th mat-sort-header="fechaDesde" scope="col">Fecha de entrega</th>
+                <th mat-sort-header="fechaHasta" scope="col">Fecha de devolución</th>
                 <th scope="col">Acciones</th>
             </tr>
         </thead>
