--- a/src/app/Components/media/media.component.html
+++ b/src/app/Components/media/media.component.html
@@ -21,7 +21,7 @@
                                         class="form-control bordeNone" 
                                         formControlName="fechaDesde" 
                                         [disabled]="alquilerCreado" 
-                                        [attr.min]="minDate"
+                                        [min]="minDate"
                                     />
                                 </div>
                             </div>
